...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search by album | track | artist " showsScopeBar="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZjC-Md-Bze">
                                <rect key="frame" x="0.0" y="88" width="414" height="98"/>
                                <textInputTraits key="textInputTraits"/>
                                <scopeButtonTitles>
                                    <string>Album</string>
                                    <string>Track</string>
                                    <string>Artist</string>
                                </scopeButtonTitles>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="OFm-qe-FF4"/>
                                </connections>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QJI-uk-bmh">
...
